error.txt
$ esy
info esy 0.6.6 (using package.json)
info checking https://github.com/ocaml/opam-repository for updates...
info checking https://github.com/esy-ocaml/esy-opam-override for updates...
info resolving esy packages: done                         
info solving esy constraints: done         
info resolving npm packages: done
info fetching: done                             
info installing: done                                      
info building @opam/dune-configurator@opam:2.5.1@aeb9d8d5
error: build failed with exit code: 1
  build log:
    # esy-build-package: building: @opam/dune-configurator@opam:2.5.1
    # esy-build-package: pwd: /Users/rjnevels/.esy/3/b/opam__s__dune_configurator-opam__c__2.5.1-5a85f163
    # esy-build-package: running: 'dune' 'build' '-p' 'dune-configurator' '-j' '4' '@install'
          ocamlc otherlibs/configurator/src/.configurator.objs/byte/configurator__V1.{cmo,cmt} (exit 2)
    (cd _build/default && /Users/rjnevels/.esy/3________________________________________________________________/i/ocam
l-4.8.1000-426898cd/bin/ocamlc.opt -w -40 -safe-string -g -bin-annot -I otherlibs/configurator/src/.configurator.objs/b
yte -I /Users/rjnevels/.esy/3________________________________________________________________/i/opam__s__dune_private_l
ibs-opam__c__2.6.1-48af76c7/lib/dune-private-libs/dune-lang -I /Users/rjnevels/.esy/3__________________________________
______________________________/i/opam__s__dune_private_libs-opam__c__2.6.1-48af76c7/lib/dune-private-libs/ocaml-config 
-I /Users/rjnevels/.esy/3________________________________________________________________/i/opam__s__dune_private_libs-
opam__c__2.6.1-48af76c7/lib/dune-private-libs/stdune -intf-suffix .ml -no-alias-deps -open Configurator__ -o otherlibs/
configurator/src/.configurator.objs/byte/configurator__V1.cmo -c -impl otherlibs/configurator/src/v1.ml)
    File "otherlibs/configurator/src/v1.ml", line 379, characters 58-71:
    379 |     fill_in_fields_that_depends_on_ocamlc_config { t with ocamlc_config }
                                                                    ^^^^^^^^^^^^^
    Error: This expression has type Ocaml_config.Vars.t
           but an expression was expected of type string Stdune.String.Map.t
        ocamlopt otherlibs/configurator/src/.configurator.objs/native/configurator__V1.{cmx,o} (exit 2)
    (cd _build/default && /Users/rjnevels/.esy/3________________________________________________________________/i/ocam
l-4.8.1000-426898cd/bin/ocamlopt.opt -w -40 -safe-string -g -I otherlibs/configurator/src/.configurator.objs/byte -I ot
herlibs/configurator/src/.configurator.objs/native -I /Users/rjnevels/.esy/3___________________________________________
_____________________/i/opam__s__dune_private_libs-opam__c__2.6.1-48af76c7/lib/dune-private-libs/dune-lang -I /Users/rj
nevels/.esy/3________________________________________________________________/i/opam__s__dune_private_libs-opam__c__2.6
.1-48af76c7/lib/dune-private-libs/ocaml-config -I /Users/rjnevels/.esy/3_______________________________________________
_________________/i/opam__s__dune_private_libs-opam__c__2.6.1-48af76c7/lib/dune-private-libs/stdune -intf-suffix .ml -n
o-alias-deps -open Configurator__ -o otherlibs/configurator/src/.configurator.objs/native/configurator__V1.cmx -c -impl
 otherlibs/configurator/src/v1.ml)
    File "otherlibs/configurator/src/v1.ml", line 379, characters 58-71:
    379 |     fill_in_fields_that_depends_on_ocamlc_config { t with ocamlc_config }
                                                                    ^^^^^^^^^^^^^
    Error: This expression has type Ocaml_config.Vars.t
           but an expression was expected of type string Stdune.String.Map.t
    error: command failed: 'dune' 'build' '-p' 'dune-configurator' '-j' '4' '@install' (exited with 1)
    esy-build-package: exiting with errors above...
    
  building @opam/dune-configurator@opam:2.5.1
esy: exiting due to errors above
